WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108776
Web Inspector: prevent crash, add required error string value
https://bugs.webkit.org/show_bug.cgi?id=108776
Summary
Web Inspector: prevent crash, add required error string value
Peter Rybin
Reported
2013-02-03 16:24:35 PST
Make inspector more fair to either-result-or-error-string convention.
Attachments
Patch
(2.86 KB, patch)
2013-02-03 16:35 PST
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
Patch
(2.57 KB, patch)
2013-02-04 16:55 PST
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
Patch
(2.55 KB, patch)
2013-02-05 02:48 PST
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
Patch
(2.50 KB, patch)
2013-02-05 05:49 PST
,
Peter Rybin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Peter Rybin
Comment 1
2013-02-03 16:35:34 PST
Created
attachment 186275
[details]
Patch
Build Bot
Comment 2
2013-02-03 17:24:47 PST
Comment on
attachment 186275
[details]
Patch
Attachment 186275
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16359804
New failing tests: inspector/debugger/watch-expressions-preserve-expansion.html
Build Bot
Comment 3
2013-02-03 17:42:52 PST
Comment on
attachment 186275
[details]
Patch
Attachment 186275
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16354870
Build Bot
Comment 4
2013-02-03 17:57:27 PST
Comment on
attachment 186275
[details]
Patch
Attachment 186275
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16355911
New failing tests: inspector/debugger/watch-expressions-preserve-expansion.html
Build Bot
Comment 5
2013-02-03 18:23:04 PST
Comment on
attachment 186275
[details]
Patch
Attachment 186275
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16352918
New failing tests: inspector/debugger/watch-expressions-preserve-expansion.html
WebKit Review Bot
Comment 6
2013-02-03 18:31:07 PST
Comment on
attachment 186275
[details]
Patch
Attachment 186275
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/16359826
New failing tests: inspector/debugger/watch-expressions-preserve-expansion.html
Pavel Feldman
Comment 7
2013-02-04 00:24:01 PST
Comment on
attachment 186275
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186275&action=review
> Source/WebCore/inspector/InspectorRuntimeAgent.cpp:84 > + *errorString = "Capybara, capybara capybara capybara: capybara!";
Please use proper wording.
Peter Rybin
Comment 8
2013-02-04 03:46:01 PST
(In reply to
comment #7
)
> (From update of
attachment 186275
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=186275&action=review
> > > Source/WebCore/inspector/InspectorRuntimeAgent.cpp:84 > > + *errorString = "Capybara, capybara capybara capybara: capybara!"; > > Please use proper wording.
I meant I didn't know what the proper wording was here. Could you please advise?
Peter Rybin
Comment 9
2013-02-04 16:28:55 PST
> I meant I didn't know what the proper wording was here. Could you please advise?
Oh, wait. That's something stupid here, error string must be already provided. Let me watch again.
Peter Rybin
Comment 10
2013-02-04 16:55:52 PST
Created
attachment 186497
[details]
Patch
Peter Rybin
Comment 11
2013-02-04 16:57:14 PST
(In reply to
comment #10
)
> Patch
Please advise what a proper wording should be instead of bogus message currently in patch. This is a protocol-visible message.
Pavel Feldman
Comment 12
2013-02-05 01:45:56 PST
Comment on
attachment 186497
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186497&action=review
> Source/WebCore/inspector/PageRuntimeAgent.cpp:141 > + *errorString = "Main world execution context not found. Capybara! Capybara!";
Is this some kind of joke?
Peter Rybin
Comment 13
2013-02-05 02:48:08 PST
Created
attachment 186586
[details]
Patch
Peter Rybin
Comment 14
2013-02-05 02:49:44 PST
> > Source/WebCore/inspector/PageRuntimeAgent.cpp:141 > > + *errorString = "Main world execution context not found. Capybara! Capybara!"; > > Is this some kind of joke?
Fixed.
Pavel Feldman
Comment 15
2013-02-05 05:31:55 PST
Comment on
attachment 186586
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=186586&action=review
> Source/WebCore/inspector/PageRuntimeAgent.cpp:140 > + // FIXME(code.review): correct or confirm the message.
Please remove this fixme.
> Source/WebCore/inspector/PageRuntimeAgent.cpp:141 > + *errorString = "Main world execution context not found.";
"Internal error: main world execution context not found." ?
Peter Rybin
Comment 16
2013-02-05 05:49:16 PST
Created
attachment 186610
[details]
Patch
WebKit Review Bot
Comment 17
2013-02-05 07:07:24 PST
Comment on
attachment 186610
[details]
Patch Clearing flags on attachment: 186610 Committed
r141891
: <
http://trac.webkit.org/changeset/141891
>
WebKit Review Bot
Comment 18
2013-02-05 07:07:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug