Web Inspector: prevent crash, add required error string value https://bugs.webkit.org/show_bug.cgi?id=108776

Patch by Peter Rybin <prybin@chromium.org> on 2013-02-05
Reviewed by Pavel Feldman.

Error string is assigned where missing, assert is added where empty string is
possible.

* inspector/InjectedScriptBase.cpp:
(WebCore::InjectedScriptBase::makeEvalCall):
* inspector/PageRuntimeAgent.cpp:
(WebCore::PageRuntimeAgent::injectedScriptForEval):

Canonical link: https://commits.webkit.org/127150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141891 268f45cc-cd09-0410-ab3c-d52691b4dbfc