Source/WebCore/inspector/PageRuntimeAgent.cpp
@@ -135,7 +135,10 @@ InjectedScript PageRuntimeAgent::injectedScriptForEval(ErrorString* errorString,
 {
     if (!executionContextId) {
         ScriptState* scriptState = mainWorldScriptState(m_inspectedPage->mainFrame());
-        return injectedScriptManager()->injectedScriptFor(scriptState);
+        InjectedScript result = injectedScriptManager()->injectedScriptFor(scriptState);
+        if (result.hasNoValue())
+            *errorString = "Internal error: main world execution context not found.";
+        return result;
     }
     InjectedScript injectedScript = injectedScriptManager()->injectedScriptForId(*executionContextId);
     if (injectedScript.hasNoValue())
